--- a/dashcols/templates/_layouts/_edit.twig
+++ b/dashcols/templates/_layouts/_edit.twig
@@ -17,9 +17,53 @@
 			pretendTabName : 'Columns' | t
 		} only %}
 
-		<hr>
+		<hr />
 
-		<div class="buttons">
+		<h3>Hide/show default fields</h3>
+
+		<div class="dashCols-defaultFields">
+
+			<div class="dashColds-defaultField">
+				{{ forms.lightswitch({
+					id: 'postDate',
+					name: 'hiddenFields[postDate]',
+					on : true,
+				}) }}
+				<label for="postDate">Post Date</label>
+			</div>
+
+			<div class="dashColds-defaultField">
+				{{ forms.lightswitch({
+					id: 'expiryDate',
+					name: 'hiddenFields[expiryDate]',
+					on : true,
+				}) }}
+				<label for="expiryDate">Expiry Date</label>
+			</div>
+
+			<div class="dashColds-defaultField">
+				{{ forms.lightswitch({
+					id: 'uri',
+					name: 'hiddenFields[uri]',
+					on : true,
+				}) }}
+				<label for="uri">URI</label>
+			</div>
+
+			<div class="dashColds-defaultField">
+				{{ forms.lightswitch({
+					id: 'section',
+					name: 'hiddenFields[section]',
+					on : true,
+				}) }}
+				<label for="section">Section</label>
+			</div>
+
+		</div>
+
+		<hr />
+
+		<div class="dashCols-buttons">
 			<input type="submit" class="btn submit" value="{{ 'Save' | t }}" />
 		</div>
 
