--- a/dashcols/resources/css/dashcols.css
+++ b/dashcols/resources/css/dashcols.css
@@ -14,21 +14,49 @@
   .dashCols-lightswitch:before {
     content: "✔"; }
 
-.dashCols-defaultFields, .dashCols-buttons {
+#dashCols-sectionEdit, .dashCols-defaultFields, .dashCols-buttons {
   width: 100%;
   float: left;
-  clear: both; }
+  clear: both;
+  margin-bottom: 20px; }
 
-.dashColds-defaultField {
-  margin-bottom: 5px;
+.tab#tab-dashColsIndex:before {
+  content: "home";
+  font-family: 'Craft';
+  speak: none;
+  -webkit-font-feature-settings: "liga", "dlig";
+     -moz-font-feature-settings: "liga", "dlig";
+          font-feature-settings: "liga", "dlig";
+  text-rendering: optimizeLegibility;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  -webkit-font-smoothing: anti-aliased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  word-wrap: normal !important;
+  line-height: 1;
+  position: relative;
+  top: 1px; }
+
+#dashCols-sections {
   width: 100%;
-  float: left;
-  clear: both; }
-  .dashColds-defaultField label {
+  clear: both;
+  float: left; }
+  #dashCols-sections ul {
+    list-style: none;
+    margin: 0;
+    padding: 0; }
+  #dashCols-sections li {
     display: inline-block;
     width: auto;
     float: left;
-    padding-top: 3px; }
-  .dashColds-defaultField .lightswitch {
-    width: auto;
-    float: left; }
+    margin: 0 10px 10px 0; }
+
+#dashCols-sectionEdit {
+  width: 100%;
+  clear: both;
+  float: left; }
