--- a/dashcols/templates/_layouts/_edit.twig
+++ b/dashcols/templates/_layouts/_edit.twig
@@ -5,54 +5,66 @@
 
 {% block content %}
 
-	<div class="dashCols-sectionInfo">
-		<h2 class="dashCols-sectionTitle">{{ section.name }}</h2>
-	</div>
+	<nav id="dashCols-sections">
+		<ul>
+		{% for item in layoutTabs %}
+			<li><a href="{{ item.url }}" class="btn{% if item.active %} active{% endif %}">{{ item.label }}</a></li>
+		{% endfor %}
+		</ul>
+	</nav>
 
-	<form method="post" accept-charset="UTF-8" data-saveshortcut="1">
+	<div id="dashCols-sectionEdit">
+		<form method="post" accept-charset="UTF-8" data-saveshortcut="1">
 
-		{% include "_includes/fieldlayoutdesigner" with {
-			fieldLayout : layout.getFieldLayout(),
-			customizableTabs : false,
-			pretendTabName : 'Columns' | t
-		} only %}
+			{% include "_includes/fieldlayoutdesigner" with {
+				fieldLayout : layout.getFieldLayout(),
+				customizableTabs : false,
+				pretendTabName : 'Columns' | t
+			} only %}
 
-		<hr />
+			<hr />
 
-		{% if hiddenFields is defined %}
-		<h3>Hide/show default fields</h3>
-		<div class="dashCols-defaultFields">
-			{% for hiddenFieldKey,hiddenFieldValue in hiddenFields %}
-			<div class="dashColds-defaultField">
-				{{ forms.lightswitch({
-					id: hiddenFieldKey,
-					name: 'hiddenFields[' ~ hiddenFieldKey ~ ']',
-					on : hiddenFieldKey in layout.hiddenFields ? false : true,
-				}) }}
-				<label for="{{ hiddenFieldKey }}">{{ hiddenFieldValue }}</label>
+			{% if hiddenFields is defined %}
+			<h3>Hide/show default fields</h3>
+			<table class="dashCols-defaultFields data fullwidth collapsible">
+				<tbody>
+					{% for hiddenFieldKey,hiddenFieldValue in hiddenFields %}
+					<tr>
+						<td class="dashCols-switch thin">
+							<div class="dashCols-defaultField">
+								{{ forms.lightswitch({
+									id: hiddenFieldKey,
+									name: 'hiddenFields[' ~ hiddenFieldKey ~ ']',
+									on : hiddenFieldKey in layout.hiddenFields ? false : true,
+								}) }}
+							</div>
+						</td>
+						<td class="dashCols-fieldName"><label for="{{ hiddenFieldKey }}">{{ hiddenFieldValue }}</label></td>
+					</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+			<hr />
+			{% endif %}
+
+			<div class="dashCols-buttons">
+				<input type="submit" class="btn submit" value="{{ 'Save' | t }}" />
 			</div>
-			{% endfor %}
-		</div>
-		<hr />
-		{% endif %}
 
-		<div class="dashCols-buttons">
-			<input type="submit" class="btn submit" value="{{ 'Save' | t }}" />
-		</div>
+			<input type="hidden" name="action" value="dashCols/layouts/saveLayout">
+			{% if sectionId is defined %}
+				<input type="hidden" name="sectionId" value="{{ sectionId }}" />
+				<input type="hidden" name="redirect" value="{{ url( 'entries/' ~ section.handle ) }}" />
+			{% elseif categoryGroupId is defined %}
+				<input type="hidden" name="categoryGroupId" value="{{ categoryGroupId }}" />
+				<input type="hidden" name="redirect" value="{{ url( 'categories/' ~ section.handle ) }}" />
+			{% elseif listingHandle is defined %}
+				<input type="hidden" name="listingHandle" value="{{ listingHandle }}" />
+				<input type="hidden" name="redirect" value="{{ url( 'entries/' ~ listingHandle ) }}" />
+			{% endif %}
+			{% if layout.id %}<input type="hidden" name="layoutId" value="{{ layout.id }}" />{% endif %}
 
-		<input type="hidden" name="action" value="dashCols/layouts/saveLayout">
-		{% if sectionId is defined %}
-			<input type="hidden" name="sectionId" value="{{ sectionId }}" />
-			<input type="hidden" name="redirect" value="{{ url( 'dashcols/layouts/section/' ~ section.handle ) }}" />
-		{% elseif categoryGroupId is defined %}
-			<input type="hidden" name="categoryGroupId" value="{{ categoryGroupId }}" />
-			<input type="hidden" name="redirect" value="{{ url( 'dashcols/layouts/category-group/' ~ section.handle ) }}" />
-		{% elseif listingHandle is defined %}
-			<input type="hidden" name="listingHandle" value="{{ listingHandle }}" />
-			<input type="hidden" name="redirect" value="{{ url( 'dashcols/layouts/listing/' ~ listingHandle ) }}" />
-		{% endif %}
-		{% if layout.id %}<input type="hidden" name="layoutId" value="{{ layout.id }}" />{% endif %}
-
-	</form>
+		</form>
+	</div>
 
 {% endblock %}
