--- a/source/src/styles/dashcols.scss
+++ b/source/src/styles/dashcols.scss
@@ -19,26 +19,53 @@
 	}
 }
 
+#dashCols-sectionEdit,
 .dashCols-defaultFields,
 .dashCols-buttons {
 	width: 100%;
 	float: left;
 	clear: both;
+	margin-bottom: 20px;
 }
 
-.dashColds-defaultField {
-	margin-bottom: 5px;
+.tab#tab-dashColsIndex {
+	&:before {
+		content: "home";
+		font-family: 'Craft';
+		speak: none;
+		font-feature-settings: "liga", "dlig";
+		text-rendering: optimizeLegibility;
+		font-weight: normal;
+		font-variant: normal;
+		text-transform: none;
+		-webkit-font-smoothing: anti-aliased;
+		-moz-osx-font-smoothing: grayscale;
+		user-select: none;
+		word-wrap: normal !important;
+		line-height: 1;
+		position: relative;
+		top: 1px;
+	}
+}
+
+#dashCols-sections {
 	width: 100%;
-	float: left;
 	clear: both;
-	label {
+	float: left;
+	ul {
+		list-style: none;
+		margin: 0; padding: 0;
+	}
+	li {
 		display: inline-block;
 		width: auto;
 		float: left;
-		padding-top: 3px;
+		margin: 0 10px 10px 0;
 	}
-	.lightswitch {
-		width: auto;
-		float: left;
-	}
+}
+
+#dashCols-sectionEdit {
+	width: 100%;
+	clear: both;
+	float: left;
 }
