--- a/dashcols/templates/about/index.twig
+++ b/dashcols/templates/about/index.twig
@@ -173,6 +173,7 @@
 				<li>Added option to hide default fields (postDate, expiryDate, URI and section)</li>
 				<li>(Hopefully) improved CP section sub nav</li>
 				<li>DashCols now redirects to index table upon saving a layout</li>
+				<li>Some minor CSS fixes here and there</li>
 			</ul>
 
 			<h5>Version 1.0 (02.08.2015)</h5>
