--- a/source/src/styles/dashcols.scss
+++ b/source/src/styles/dashcols.scss
@@ -69,3 +69,9 @@
 	clear: both;
 	float: left;
 }
+
+.elements.datatablesorthelper .move.icon,
+.elementindex .move.icon {
+	top: 50% !important;
+	margin-top: -12px !important;
+}
