--- a/dashcols/templates/about/index.twig
+++ b/dashcols/templates/about/index.twig
@@ -168,6 +168,11 @@
 
 			<h3 class="dashCols-title">{{ 'Changelog' | t }}</h3>
 
+			<h5>Version 1.1.1 (02.12.2015)</h5>
+			<ul>
+				<li>Hotfixed an annoying issue w/ move icons not being vertically centered in tall table rows</li>
+			</ul>
+
 			<h5>Version 1.1 (02.12.2015)</h5>
 			<ul>
 				<li>Added option to hide default fields (postDate, expiryDate, URI and section)</li>
