--- a/dashcols/templates/_layouts/_edit.twig
+++ b/dashcols/templates/_layouts/_edit.twig
@@ -5,13 +5,15 @@
 
 {% block content %}
 
+	{% if layoutUrls is defined and layoutUrls | length > 0 %}
 	<nav id="dashCols-sections">
 		<ul>
-		{% for item in layoutTabs %}
+		{% for item in layoutUrls %}
 			<li><a href="{{ item.url }}" class="btn{% if item.active %} active{% endif %}">{{ item.label }}</a></li>
 		{% endfor %}
 		</ul>
 	</nav>
+	{% endif %}
 
 	<div id="dashCols-sectionEdit">
 		<form method="post" accept-charset="UTF-8" data-saveshortcut="1">
