--- a/source/src/styles/dashcols.scss
+++ b/source/src/styles/dashcols.scss
@@ -75,3 +75,12 @@
 	top: 50% !important;
 	margin-top: -12px !important;
 }
+
+#dashCols-colophone {
+	width: 100%;
+	float: left;
+	clear: both;
+	font-size: 11px;
+	color: #8f98a3;
+	text-align: right;
+}
