Styled CP footer

--- a/dashcols/resources/css/dashcols.css
+++ b/dashcols/resources/css/dashcols.css
@@ -14,11 +14,16 @@
   .dashCols-lightswitch:before {
     content: "✔"; }
 
-#dashCols-sectionEdit, .dashCols-defaultFields, .dashCols-buttons {
+#dashCols-sectionEdit, #dashCols-defaultFields {
   width: 100%;
   float: left;
   clear: both;
   margin-bottom: 20px; }
+
+#dashCols-actions {
+  width: 100%;
+  float: left;
+  clear: both; }
 
 .tab#tab-dashColsIndex:before {
   content: "home";
@@ -71,4 +76,5 @@
   clear: both;
   font-size: 11px;
   color: #8f98a3;
-  text-align: right; }
+  text-align: right;
+  margin-top: 20px; }
