--- a/dashcols/templates/about/index.twig
+++ b/dashcols/templates/about/index.twig
@@ -168,12 +168,24 @@
 
 			<h3 class="dashCols-title">{{ 'Changelog' | t }}</h3>
 
-			<h5>Version 1.1.1 (02.12.2015)</h5>
+			<h5>Version 1.1.3 – 02.13.15</h5>
+			<ul>
+				<li>Edit template only displays relevant default fields</li>
+				<li>Removed editing for individual Single sections</li>
+				<li>Added footer CP section footer</li>
+			</ul>
+
+			<h5>Version 1.1.2 – 02.12.15</h5>
+			<ul>
+				<li>Fixed issue w/ 404 for Singles listing redirect on save</li>
+			</ul>
+
+			<h5>Version 1.1.1 – 02.12.15</h5>
 			<ul>
 				<li>Hotfixed an annoying issue w/ move icons not being vertically centered in tall table rows</li>
 			</ul>
 
-			<h5>Version 1.1 (02.12.2015)</h5>
+			<h5>Version 1.1 – 02.12.15</h5>
 			<ul>
 				<li>Added option to hide default fields (postDate, expiryDate, URI and section)</li>
 				<li>(Hopefully) improved CP section sub nav</li>
@@ -181,7 +193,7 @@
 				<li>Some minor CSS fixes here and there</li>
 			</ul>
 
-			<h5>Version 1.0 (02.08.2015)</h5>
+			<h5>Version 1.0 – 02.08.15</h5>
 			<p><em>Initial public release</em></p>
 
 		</section>
@@ -209,7 +221,7 @@
 		<hr />
 
 		<section>
-			<h4 class="dashCols-title">{{ 'Disclaimer' | t }}</h4>
+			<h3 class="dashCols-title">{{ 'Disclaimer' | t }}</h3>
 
 			<p>DashCols is provided free of charge. The author is not responsible for any data loss or other problems resulting from the use of this plugin.</p>
 
