--- a/dashcols/templates/about/index.twig
+++ b/dashcols/templates/about/index.twig
@@ -170,6 +170,7 @@
 
 			<h5>Version 1.1.3 – 02.13.15</h5>
 			<ul>
+				<li>Fixed issue w/ redirect on All entries layout save</li>
 				<li>Edit template only displays relevant default fields</li>
 				<li>Removed editing for individual Single sections</li>
 				<li>Added footer CP section footer</li>
