Added settings page and undercover mode setting. Bumped to 1.1.4

--- a/dashcols/templates/about/index.twig
+++ b/dashcols/templates/about/index.twig
@@ -168,6 +168,11 @@
 
 			<h3 class="dashCols-title">{{ 'Changelog' | t }}</h3>
 
+			<h5>Version 1.1.4 - 02.13.15</h5>
+			<ul>
+				<li>Added settings page and the <em>Undercover mode</em> setting to hide the CP section and disable layout editing</li>
+			</ul>
+
 			<h5>Version 1.1.3 – 02.13.15</h5>
 			<ul>
 				<li>Fixed issue w/ redirect on All entries layout save</li>
