--- a/dashcols/templates/about/index.twig
+++ b/dashcols/templates/about/index.twig
@@ -47,7 +47,7 @@
 						<td width="25%">
 							<a href="http://buildwithcraft.com/docs/date-time-fields" class="go">Date/time</a>
 						</td>
-						<td class="desc"></td>
+						<td class="desc">Outputs date and/or time based on field settings</td>
 					</tr>
 					<tr>
 						<td width="25%">
@@ -168,6 +168,19 @@
 
 			<h3 class="dashCols-title">{{ 'Changelog' | t }}</h3>
 
+			<h5>Version 1.1.6 - 02.23.15</h5>
+
+			<ul>
+				<li>Minor refactor</li>
+			</ul>
+
+			<h5>Version 1.1.5 - 02.23.15</h5>
+
+			<ul>
+				<li>Fixed issue where the Edit Columns button would not be added to non-managed index tables</li>
+				<li>Date/Time columns now display date and/or time based on field settings</li>
+			</ul>
+
 			<h5>Version 1.1.4 - 02.13.15</h5>
 			<ul>
 				<li>Added settings page and the <em>Undercover mode</em> setting to hide the CP section and disable layout editing</li>
@@ -218,6 +231,7 @@
 				<li>Support for User tables</li>
 				<li>Inline editing of sections/listings/category groups</li>
 				<li>Option to clear a layout w/ a single button</li>
+				<li>Optional output of element metadata</li>
 			</ul>
 
 			<p><em>Unfortunately, I can offer no ETA on any of these additions.</em></p>
