--- a/dashcols/resources/css/dashcols.css
+++ b/dashcols/resources/css/dashcols.css
@@ -14,6 +14,54 @@
   .dashCols-lightswitch:before {
     content: "✔"; }
 
+.dashCols-assetFieldImage {
+  width: auto;
+  float: left;
+  max-width: 100%;
+  position: relative;
+  border-radius: 2px;
+  overflow: hidden; }
+
+.dashCols-assetFieldImage img {
+  display: block;
+  float: left; }
+
+.dashCols-assetFieldImage .dashCols-assetFileCount {
+  box-sizing: border-box;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-color: #333F4D;
+  top: auto;
+  color: #d7d9db;
+  padding: 2px 2px 4px 4px; }
+
+.dashCols-assetFile {
+  width: 100%;
+  float: left;
+  clear: both; }
+
+.dashCols-assetFileIcon {
+  display: inline-block;
+  margin-right: 2px; }
+
+.dashCols-assetFilename {
+  font-family: "Lucida Console", Monaco, monospace;
+  font-size: 10px;
+  position: relative;
+  top: -6px; }
+
+.dashCols-assetFileCount {
+  display: block;
+  width: 100%;
+  clear: both;
+  font-size: 10px;
+  color: rgba(0, 0, 0, 0.5);
+  line-height: 1;
+  position: relative;
+  top: -2px; }
+
 #dashCols-sectionEdit, #dashCols-defaultFields {
   width: 100%;
   float: left;
