--- a/dashcols/templates/_layouts/_edit.twig
+++ b/dashcols/templates/_layouts/_edit.twig
@@ -1,7 +1,7 @@
 {% extends '_layouts/cp' %}
 {% import '_includes/forms' as forms %}
 
-{% set title = 'DashCols' | t %}
+{% set title = craft.dashCols.getPluginName | t %}
 
 {% block content %}
 
