--- a/dashcols/templates/_layouts/index.twig
+++ b/dashcols/templates/_layouts/index.twig
@@ -1,6 +1,6 @@
 {% extends '_layouts/cp' %}
 
-{% set title = 'DashCols' | t %}
+{% set title = craft.dashCols.getPluginName | t %}
 {% set selectedTab = 'dashColsIndex' %}
 
 {% set content %}
