Added some screenshots

--- a/source/src/styles/dashcols.index.scss
+++ b/source/src/styles/dashcols.index.scss
@@ -16,9 +16,9 @@
 	margin-top: -12px !important;
 }
 
-.elementindex .data td a {
-	white-space: nowrap;
-}
+// .elementindex .data td a {
+// 	white-space: nowrap;
+// }
 
 /*
 *  Fields
