--- a/dashcols/templates/about.twig
+++ b/dashcols/templates/about.twig
@@ -168,6 +168,16 @@
 
 			<h3 class="dashCols-title">{{ 'Changelog' | t }}</h3>
 
+			<h5>Version 1.2.1 – 10.04.15</h5>
+			<ul>
+				<li><strong>Added Entry Type metadata column</strong></li>
+			</li>
+
+			<h5>Version 1.2 – 06.04.15</h5>
+			<ul>
+				<li><strong>Added sorting capabilities for FieldTypes of Boolean, String, Number or DateTime value</strong></li>
+			</li>
+
 			<h5>Version 1.1.9 – 04.03.15</h5>
 			<ul>
 				<li><strong>Added option to output element metadata (Updated Date, ID and Author) as columns</strong></li>
