Fixed bug w/ Structure sorting. Bump to 1.2.1

--- a/dashcols/templates/about.twig
+++ b/dashcols/templates/about.twig
@@ -168,6 +168,11 @@
 
 			<h3 class="dashCols-title">{{ 'Changelog' | t }}</h3>
 
+			<h5>Version 1.2.1 - 04.20.15</h5>
+			<ul>
+				<li>Fixed bug where the _Structure_ sorting option was hidden</li>
+			</ul>
+
 			<h5>Version 1.1.9 – 04.03.15</h5>
 			<ul>
 				<li><strong>Added option to output element metadata (Updated Date, ID and Author) as columns</strong></li>
