Added SVG thumbnail support

--- a/dashcols/templates/about.twig
+++ b/dashcols/templates/about.twig
@@ -168,6 +168,11 @@
 
 			<h3 class="dashCols-title">{{ 'Changelog' | t }}</h3>
 
+			<h5>Version 1.2.3 - 06.03.15</h5>
+			<ul>
+				<li>SVG assets now display as thumbnails for Craft 2.4 builds (only where ImageMagick is installed)</li>
+			</ul>
+
 			<h5>Version 1.2.2 - 04.20.15</h5>
 			<ul>
 				<li>Fixed bug where the _Structure_ sorting option was hidden</li>
