Updated readme and about

--- a/dashcols/templates/about.twig
+++ b/dashcols/templates/about.twig
@@ -168,6 +168,13 @@
 
 			<h3 class="dashCols-title">{{ 'Changelog' | t }}</h3>
 
+			<h5>Version 1.2.4 - 09.08.15</h5>
+			<ul>
+				<li>Added support for Doxter</li>
+				<li>Slightly improved support for complex custom fieldtypes in general</li>
+				<li>Removed custom plugin name setting</li>
+			</ul>
+
 			<h5>Version 1.2.3 - 06.03.15</h5>
 			<ul>
 				<li>SVG assets now display as thumbnails for Craft 2.4 builds (only where ImageMagick is installed)</li>
