Fixes issue where numeric columns wouldnt render zeros

--- a/dashcols/templates/about.twig
+++ b/dashcols/templates/about.twig
@@ -168,6 +168,11 @@
 
 			<h3 class="dashCols-title">{{ 'Changelog' | t }}</h3>
 
+			<h5>Version 1.2.5 - 09.23.15</h5>
+			<ul>
+				<li>Fixed issue where numeric columns wouldn't render zeros</li>
+			</ul>
+
 			<h5>Version 1.2.4 - 09.08.15</h5>
 			<ul>
 				<li>Added support for Doxter</li>
