--- a/dashcols/resources/css/dashcols.cp.css
+++ b/dashcols/resources/css/dashcols.cp.css
@@ -1,7 +1,3 @@
-/*
-*  CP section header/branding
-*
-*/
 .tab#tab-dashColsIndex:before {
   content: "home";
   font-family: 'Craft';
@@ -24,6 +20,9 @@
   position: relative;
   top: 1px; }
 
+.dashCols-layoutGroupTable {
+  margin-bottom: 20px; }
+
 /*
 *  About page
 *
@@ -35,7 +34,8 @@
 *  Edit template
 *
 */
-#dashCols-sectionEdit, #dashCols-defaultFields {
+#dashCols-sectionEdit,
+#dashCols-defaultFields {
   width: 100%;
   float: left;
   clear: both;
