--- a/dashcols/templates/_layouts/index.twig
+++ b/dashcols/templates/_layouts/index.twig
@@ -6,12 +6,10 @@
 {% set content %}
 
 	{% if craft.dashCols.isCraftRequiredVersion == false %}
-	
 	<p class="error">Sorry, you need to run Craft {{ craft.dashCols.requiredCraftVersion }} or newer to use DashCols.<br/><strong>Please update your Craft installation.</strong></p>
-	
 	{% endif %}
 	
-	<table id="dashCols-listings" class="data fullwidth collapsible">
+	<table id="dashCols-listings" class="data fullwidth collapsible dashCols-layoutGroupTable">
 		<thead>
 			<th scope="col">{{ 'Listings' | t }}</th>
 		</thead>
@@ -25,9 +23,7 @@
 	</table>
 
 	{% if channels %}
-	<br />
-
-	<table id="dashCols-channels" class="data fullwidth collapsible">
+	<table id="dashCols-channels" class="data fullwidth collapsible dashCols-layoutGroupTable">
 		<thead>
 			<th scope="col">{{ 'Channels' | t }}</th>
 		</thead>
@@ -42,9 +38,7 @@
 	{% endif %}
 
 	{% if structures %}
-	<br />
-
-	<table id="dashCols-structures" class="data fullwidth collapsible">
+	<table id="dashCols-structures" class="data fullwidth collapsible dashCols-layoutGroupTable">
 		<thead>
 			<th scope="col">{{ 'Structures' | t }}</th>
 		</thead>
@@ -59,9 +53,7 @@
 	{% endif %}
 
 	{% if categoryGroups %}
-	<br />
-
-	<table id="dashCols-sections" class="data fullwidth collapsible">
+	<table id="dashCols-sections" class="data fullwidth collapsible dashCols-layoutGroupTable">
 		<thead>
 			<th scope="col">{{ 'Category groups' | t }}</th>
 		</thead>
@@ -76,9 +68,7 @@
 	{% endif %}
 
 	{% if userGroups %}
-	<br />
-
-	<table id="dashCols-users" class="data fullwidth collapsible">
+	<table id="dashCols-users" class="data fullwidth collapsible dashCols-layoutGroupTable">
 		<thead>
 			<th scope="col">{{ 'User groups' | t }}</th>
 		</thead>
@@ -88,7 +78,7 @@
 			</tr>
 			{% for userGroup in userGroups %}
 			<tr data-id="{{ userGroup.id }}" data-name="{{ userGroup.name|t }}">
-				<th scope="row" data-title="{{ 'User groups' | t }}"><a href="{{ url( 'dashcols/layouts/users/' ~ userGroup.id ) }}">{{ userGroup.name | t }}</a></th>
+				<th scope="row" data-title="{{ 'Category groups' | t }}"><a href="{{ url( 'dashcols/layouts/category-group/' ~ userGroup.handle ) }}">{{ userGroup.name | t }}</a></th>
 			</tr>
 			{% endfor %}
 		</tbody>
